Enviando ID para login por email

--- a/backend/src/app/views/emails/enrollment.hbs
+++ b/backend/src/app/views/emails/enrollment.hbs
@@ -2,6 +2,7 @@
   <p>Welcome to the gym <strong>GymPoint</strong>, below is your registration details.</p>
 
   <p style="border-left: 7px solid #EE4D64; padding-left: 12px">
+    <strong>Login ID: </strong> {{ login }} <br />
     <strong>Date of enrollment: </strong> {{ dateEnrollment }} <br />
     <strong>Plan: </strong> {{ planName }} ({{ planDuration }} Months) <br />
     <strong>Total price: </strong>R$ {{ planPrice }} <br />
